[package]
name = "bouncing_balls"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.22"
piston2d-graphics = "0.45.0"
piston_window = "0.132.0"
rand = "0.8.5"
tracing-subscriber = "0.3.18"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.85.0"
toml = "0.8.19"
serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.92"
lazy_static = "1.5.0"
